Ms.Arch.Hw02/k8s/manual-manifest/postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ms-arch-hw02
  
---
#Service

apiVersion: v1
kind: Service
metadata:
    name: postgres-s-postgresql
    namespace: ms-arch-hw02
    labels:
        app: postgres
spec:
    selector:
        app: postgres
    type: ClusterIP
    ports:
        - port: 5432

---
#StatefulSet

apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: postgres-statefulset
    namespace: ms-arch-hw02
spec:
    serviceName: postgres-ss
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
                - name: postgres
                  image: postgres:latest
                  ports:
                    - containerPort: 5432
                      name: postgredb
                  volumeMounts:
                    - name: postgres-db
                      mountPath: /var/lib/postgresql/data
                      subPath: postgres-db
    volumeClaimTemplates:
        - metadata:
            name: postgres-db
          spec:
            accessModes: [ "ReadWriteOnce" ]
            storageClassName: "standard"
            resources:
                requests:
                    storage: 512Mi
