Ms.Arch.Hw02/k8s/manual-manifest/run-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ms-arch-hw02

---
#Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
    name: ms-hw02-d
    namespace: ms-arch-hw02
spec:
    selector:
        matchLabels:
            app: ms-hw02-app
    replicas: 2
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0
    template:
        metadata:
            labels:
                app: ms-hw02-app
        spec:
            containers:
            - image: ms-arch-hw02-api:1.0.0
              name: ms-hw02
              ports:
                - name: web
                  containerPort: 5000
              livenessProbe:
                httpGet:
                    port: web
                    path: /liveness
                initialDelaySeconds: 10
                periodSeconds: 15
                timeoutSeconds: 1
              readinessProbe:
                httpGet:
                    port: web
                    path: /readiness
                initialDelaySeconds: 10
                periodSeconds: 5


---
#Service

apiVersion: v1
kind: Service
metadata:
    name: ms-hw02-s
    namespace: ms-arch-hw02
spec:
    type: ClusterIP
    selector:
        app: ms-hw02-app
    ports:
        - port: 8000
          targetPort: web

---
#Ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ms-hw02-i
    namespace: ms-arch-hw02
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/configuration-snippet: |-
            rewrite ^/otusapp/Oveyn/(.*) /$1 last;
spec:
    rules:
    - host: arch.homework
      http:
        paths:
          - backend:
                service:
                    name: ms-hw02-s
                    port:
                        number: 8000
            path: /
            pathType: Prefix
